k8s/Deployment-blue-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-hello-blue
  labels:
    app: go
    version: blue
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: go
      version: blue
  template:
    metadata:
      labels:
        app: go
        version: blue
    spec:
      containers:
      - name: go
        image: abdelhak245/kube-hello:v2.0
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-hello-green
  labels:
    app: go
    version: green
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: go
      version: green
  template:
    metadata:
      labels:
        app: go
        version: green
    spec:
      containers:
      - name: go
        image: abdelhak245/kube-hello:v3.0
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
