k8s/Service-blue.yml
apiVersion: v1
kind: Service
metadata:
  name: kube-hello-blue
spec:
  selector:
    app: go
    version: blue
  ports:
    - protocol: TCP
      port: 9376
      targetPort: 8080
