k8s/Service-green.yml
apiVersion: v1
kind: Service
metadata:
  name: kube-hello-green
spec:
  selector:
    app: go
    version: green
  ports:
    - protocol: TCP
      port: 9376
      targetPort: 8080
