k8s/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: kube-hello
spec:
  selector:
    app: go
  ports:
    - protocol: TCP
      port: 9376
      targetPort: 8080
